sales entry vertical

--- a/public/V3/Farmers/Farmers.html
+++ b/public/V3/Farmers/Farmers.html
@@ -63,7 +63,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="./Farmers.html" class="nav-link text-white d-flex flex-column align-items-center">
+                            <a href="../V3.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="./Farmers.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
                             </a>
                         </div>
