--- a/public/V3/Saleswithentry/dashboard.html
+++ b/public/V3/Saleswithentry/dashboard.html
@@ -62,8 +62,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../V3.html"
-                                class="nav-link text-white d-flex flex-column align-items-center">
+                            <a href="../V3.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
@@ -76,6 +75,12 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./vertical.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Vertical
+                            </a>
+                        </li>
 
                         <!-- Mobile Nav -->
                         <div class="collapse d-lg-none mt-3" id="mobileNavbar">
@@ -96,6 +101,13 @@
                                             <i class="bi bi-building-add text-info d-block mb-1"
                                                 style="font-size: 1.5rem;"></i>
                                             Insert_F
+                                        </a>
+                                    </div>
+                                    <div class="col">
+                                        <a href="./vertical.html" class="nav-link text-white">
+                                            <i class="bi bi-journal-plus  text-warning d-block mb-1"
+                                                style="font-size: 1.5rem;"></i>
+                                            Vertical
                                         </a>
                                     </div>
                                 </div>
@@ -138,6 +150,13 @@
                                                         href="./insertInFooter.html">
                                                         <i class="bi bi-building-add text-info me-3 fs-5"></i>
                                                         <span>Insert Footer</span>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a class="dropdown-item d-flex align-items-center" href="./vertical.html
+                                                        ">
+                                                        <i class="bi bi-journal-plus  text-warning me-3 fs-5"></i>
+                                                        <span>Vertical</span>
                                                     </a>
                                                 </li>
                                                 <li>
