--- a/public/V3/Items/Items.html
+++ b/public/V3/Items/Items.html
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
+                            <a href="../V3.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
@@ -112,7 +112,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="./Items.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
                             </a>
                         </div>
