--- a/public/V3/Sales/Sales.html
+++ b/public/V3/Sales/Sales.html
@@ -62,7 +62,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./Sales.html" class="nav-link text-white d-flex flex-column align-items-center">
+                            <a href="../V3.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="./Sales.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
                             </a>
                         </div>
