--- a/public/V3/Saleswithentry/insertInFooter.html
+++ b/public/V3/Saleswithentry/insertInFooter.html
@@ -65,13 +65,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./salesWithEntry.html"
+                            <a href="./dashboard.html"
                                 class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
                         </li>
-
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="#" id="HeaderItemFarmersId">
@@ -109,7 +108,7 @@
     </header>
     <main class="content">
         <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
+            <nav class="mt-3 d-none" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-3">
                     <li class="breadcrumb-item">
                         <a href="../V3.html" class="bi bi-house me-1 text-black text-decoration-none"></a>
@@ -123,7 +122,7 @@
                 </ol>
             </nav>
 
-            <div class="table-responsive">
+            <div class="table-responsive mt-2">
                 <table id="table" class="table" data-show-footer="true">
                     <thead>
                         <tr>
