--- a/public/V3/Saleswithentry/vertical.html
+++ b/public/V3/Saleswithentry/vertical.html
@@ -48,7 +48,7 @@
                     <a href="/"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                         <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                        <span class="fs-4">KeshavSoft</span>
+                        <span class="fs-4">Vertical</span>
                     </a>
 
                     <!-- Mobile Toggler -->
@@ -60,36 +60,18 @@
                     <!-- Desktop Navigation -->
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-none d-lg-flex">
                         <li>
-                            <a href="../V2.html" class="nav-link text-white text-center">
+                            <a href="../V3.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./salesWithEntry.html" class="nav-link text-white d-flex flex-column align-items-center">
+                            <a href="./dashboard.html"
+                                class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./crud.html">
-                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert_F
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link text-white text-center bg-light bg-opacity-25" href="./vertical.html">
-                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
-                                Vertical
-                            </a>
-                        </li>
-                       <li class="nav-item ">
-                            <a class="nav-link text-white rounded "
-                                href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1 fs-4"></i>
-                                Show
-                            </a>
-                        </li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="#" id="HeaderItemFarmersId">
                                 <i class="bi bi-person-bounding-box d-block mb-1 fs-4"></i>
@@ -103,28 +85,16 @@
                 <div class="collapse d-lg-none mt-3" id="mobileNavbar">
                     <div class="row row-cols-3 g-2 text-center">
                         <div class="col">
-                            <a href="../V2.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </div>
                         <div class="col">
-                            <a href="./salesWithEntry.html" class="nav-link text-white">
+                            <a href="./dashboard.html" class="nav-link text-white">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
                             </a>
                         </div>
-                        <div class="col">
-                            <a href="./create.html" class="nav-link text-white bg-light bg-opacity-25 rounded">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
-                                Insert
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="./crud.html" class="nav-link text-white bg-light bg-opacity-25 rounded">
-                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert_F
-                            </a>
-                        </div>
+
                         <div class="col">
                             <a href="#" class="nav-link text-white" id="HeaderItemFarmersId">
                                 <i class="bi bi-person-bounding-box d-block mb-1 fs-4"></i>
@@ -137,9 +107,9 @@
         </div>
     </header>
 
-   <main class="content">
-        <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
+    <main class="content">
+        <div class="container ">
+            <nav class="mt-3 d-none" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-3">
                     <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
 
