--- a/public/V3/V3.html
+++ b/public/V3/V3.html
@@ -128,15 +128,16 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-md-4">
                         <div class="card shadow-lg border-0 rounded-4">
                             <div class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
                                 <h4 class="mb-0"><i class="bi bi-bar-chart-line"></i> Sales Entry</h4>
                             </div>
                             <div class="card-body text-center">
-                                <a href="./Saleswithentry/salesWithEntry.html" class="btn btn-outline-primary btn-lg w-75"> Sales With Entry
-                                    </a>
+                                <a href="./Saleswithentry/dashboard.html" class="btn btn-outline-primary btn-lg w-75">
+                                    Sales With Entry
+                                </a>
                             </div>
                         </div>
                     </div>
