--- a/public/V3/Saleswithentry/crud.html
+++ b/public/V3/Saleswithentry/crud.html
@@ -45,11 +45,12 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-between">
 
                     <!-- Brand -->
-                    <a href="/"
+                    <a href="./crud.html"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                        <span class="fs-4">KeshavSoft</span>
+                        <i class="bi bi-building-add text-info d-block mb-1 me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">Insert_Footer</span>
                     </a>
+
 
                     <!-- Mobile Toggler -->
                     <button class="navbar-toggler d-lg-none border-0 text-white" type="button" data-bs-toggle="collapse"
@@ -65,31 +66,14 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./salesWithEntry.html"
+                            <a href="./dashboard.html"
                                 class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link text-white text-center bg-light bg-opacity-25" href="./crud.html">
-                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert_F
-                            </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-white text-center " href="./vertical.html">
-                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
-                                Vertical
-                            </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-white rounded text-center "
-                                href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1 fs-4"></i>
-                                Show
-                            </a>
-                        </li>
+
+
 
 
                         <li class="nav-item">
@@ -105,22 +89,22 @@
                 <div class="collapse d-lg-none mt-3" id="mobileNavbar">
                     <div class="row row-cols-3 g-2 text-center">
                         <div class="col">
-                            <a href="../V2.html" class="nav-link text-white">
+                            <a href="../V3.html" class="nav-link text-white">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </div>
                         <div class="col">
-                            <a href="./salesWithEntry.html" class="nav-link text-white">
+                            <a href="./dashboard.html" class="nav-link text-white">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i> Parent
                             </a>
                         </div>
-                        <div class="col">
+                        <!-- <div class="col">
                             <a href="./create.html" class="nav-link text-white bg-light bg-opacity-25 rounded">
                                 <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
                                     style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
-                        </div>
+                        </div> -->
                         <div class="col">
                             <a href="./crud.html" class="nav-link text-white bg-light bg-opacity-25 rounded">
                                 <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
@@ -140,13 +124,15 @@
     </header>
     <main class="content">
         <div class="container">
-            <nav class="mt-3" aria-label="breadcrumb">
+            <nav class="mt-3  d-none" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-3">
                     <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item"><a href="./salesWithEntry.html">Sales with entry </a></li>
-                   <li class="breadcrumb-item"><a href="#" class="RefreshBSTableClass">Insert in footer</a></li>
+                    <li class="breadcrumb-item"><a href="./dashboard.html" class="text-decoration-none text-black">Sales
+                            with entry </a></li>
+                    <li class="breadcrumb-item"><a href="#"
+                            class="RefreshBSTableClass text-decoration-none text-black">Insert in footer</a></li>
             </nav>
-            <div class="table-responsive">
+            <div class="table-responsive mt-3">
                 <table id="table" class="table" data-show-footer="true">
                     <thead>
                         <tr>
