--- a/public/V3/Saleswithentry/dashboard.html
+++ b/public/V3/Saleswithentry/dashboard.html
@@ -44,8 +44,8 @@
                     <!-- Brand -->
                     <a href="/"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                        <span class="fs-4">KeshavSoft</span>
+                        <i class="bi bi-D me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">Dashboard</span>
                     </a>
 
                     <!-- Mobile Toggler -->
@@ -69,7 +69,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./insertInFooter.html">
+                            <a class="nav-link text-white text-center" href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert_F
                             </a>
@@ -97,7 +97,7 @@
                                     </a>
 
                                     <div class="col">
-                                        <a href="./insertInFooter.html" class="nav-link text-white">
+                                        <a href="./crud.html" class="nav-link text-white">
                                             <i class="bi bi-building-add text-info d-block mb-1"
                                                 style="font-size: 1.5rem;"></i>
                                             Insert_F
@@ -117,57 +117,41 @@
     </header>
 
     <main>
-        <section class="py-1 mt-1">
+        <section class="py-5 mt-5">
             <div class="container">
-                <nav class="mt-3" aria-label="breadcrumb">
-                    <ol class="breadcrumb mb-5">
-                        <li class="breadcrumb-item"><a href="../V3.html" class="bi bi-house me-1"></i></a>
-                        <li class="breadcrumb-item">Sales With Entry</a></li>
-
-                </nav>
-                <section class="py-2 mt-3">
-                    <div class="container">
-                        <div class="row justify-content-center g-5">
-                            <div class="col-md-5">
-                                <div class="card shadow-lg border-0 rounded-4">
-                                    <div
-                                        class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
-                                        <h4 class="mb-0"><i class="bi bi-card-text"></i>Sales With Entry</h4>
-                                    </div>
-                                    <div class="card-body text-center">
-                                        <div class="dropdown">
-                                            <button class="btn btn-outline-primary btn-lg dropdown-toggle w-75"
-                                                type="button" data-bs-toggle="dropdown" aria-expanded="false"
-                                                id="contentDropdownBtn">
-                                                Select File
-                                            </button>
-                                            <ul class="dropdown-menu w-75 shadow-sm start-0">
-
-                                                <li>
-
-                                                <li>
-                                                    <a class="dropdown-item d-flex align-items-center"
-                                                        href="./insertInFooter.html">
-                                                        <i class="bi bi-building-add text-info me-3 fs-5"></i>
-                                                        <span>Insert Footer</span>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a class="dropdown-item d-flex align-items-center" href="./vertical.html
-                                                        ">
-                                                        <i class="bi bi-journal-plus  text-warning me-3 fs-5"></i>
-                                                        <span>Vertical</span>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
+                <div class="row justify-content-center g-4">
+                    <!-- Sales Card -->
+                    <div class="col-md-4">
+                        <div class="card shadow-lg border-0 rounded-4">
+                            <div class="card-header bg-gradient bg-info text-white text-center rounded-top-4">
+                                <h4 class="mb-0"><i class="bi bi-building"></i> Insert_F</h4>
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="./crud.html" class="btn btn-outline-info btn-lg w-75">Dive into Insert_F
+                                    </a>
                             </div>
                         </div>
                     </div>
-                </section>
+
+
+                    <!-- Items Card -->
+                    <div class="col-md-4">
+                        <div class="card shadow-lg border-0 rounded-4">
+                            <div class="card-header bg-gradient bg-warning text-White text-center rounded-top-4">
+                                <h4 class="mb-0"><i class="bi bi-journal-plus"></i> Vertical</h4>
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="./vertical.html" class="btn btn-outline-warning btn-lg w-75">Go To Vertical</a>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
