--- a/public/V3/V3.html
+++ b/public/V3/V3.html
@@ -77,6 +77,12 @@
                                 <span class="d-block">Items</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="./Saleswithentry/dashboard.html" class="nav-link text-white text-center">
+                                <i class="bi bi-bar-chart-line d-block mx-auto mb-1" style="font-size: 1.5rem;"></i>
+                                <span class="d-block">Sales entry</span>
+                            </a>
+                        </li>
                     </ul>
 
                 </div>
@@ -131,11 +137,11 @@
 
                     <div class="col-md-4">
                         <div class="card shadow-lg border-0 rounded-4">
-                            <div class="card-header bg-gradient bg-primary text-white text-center rounded-top-4">
+                            <div class="card-header bg-info bg-info text-white text-center rounded-top-4">
                                 <h4 class="mb-0"><i class="bi bi-bar-chart-line"></i> Sales Entry</h4>
                             </div>
                             <div class="card-body text-center">
-                                <a href="./Saleswithentry/dashboard.html" class="btn btn-outline-primary btn-lg w-75">
+                                <a href="./Saleswithentry/dashboard.html" class="btn btn-outline-info btn-lg w-75">
                                     Sales With Entry
                                 </a>
                             </div>
