--- a/public/V3/SubTable/subTableInsert.html
+++ b/public/V3/SubTable/subTableInsert.html
@@ -172,56 +172,7 @@
 
                     <div class="table-responsive mt-3">
                         <table id="table" class="table" data-show-footer="true">
-                            <thead>
-                                <tr>
-                                    <th data-formatter="jFLocalSerialColumn" data-width="50">#</th>
-                                    <th data-field="ITEMNAME" data-width="350">ItemName</th>
-                                    <th data-field="RATE" data-width="200">Rate</th>
-                                    <th data-width="100">Opts.</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                                <tr>
-                                    <th></th>
-                                    <th>
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" id="TableFooterItemNameInputId"
-                                                autocomplete="off" placeholder="Enter ItemName" required
-                                                list="FarmersDataListId">
-                                            <!-- <datalist id="FarmersDataListId">
-                                                <option value="Chrome"></option>
-                                                <option value="Firefox"></option>
-                                                <option value="Opera"></option>
-                                                <option value="Safari"></option>
-                                                <option value="Microsoft Edge"></option>
-                                            </datalist> -->
 
-                                            <div class="invalid-feedback">
-                                                Please provide correct Name.
-                                            </div>
-                                        </div>
-                                    </th>
-
-
-                                    <th>
-                                        <div class="input-group">
-                                            <input class="form-control" id="TableFooterRateInputId" type="number"
-                                                placeholder="Enter Rate">
-                                            <div class="invalid-feedback">
-                                                Please enter Valid date
-                                            </div>
-                                        </div>
-                                    </th>
-
-
-                                    <th class="text-start">
-                                        <button class="btn btn-outline-success" type="button"
-                                            id="TableFooterSaveButtonId">
-                                            Save
-                                        </button>
-                                    </th>
-                                </tr>
-                            </tfoot>
                         </table>
                     </div>
                 </div>
@@ -256,6 +207,41 @@
                 return index + 1;
             };</script>
         <!-- Bootstrap JavaScript Libraries -->
+        <!-- Edit Modal -->
+        <!-- Edit Modal -->
+        <div class="modal fade" id="EditModal" tabindex="-1" aria-labelledby="EditModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="EditModalLabel">Edit Item</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="FormId">
+                            <div class="mb-3 d-none">
+                                <label for="ModalPkInput" class="form-label">Pk</label>
+                                <input type="text" class="form-control" id="ModalPkInput" name="Pk">
+                            </div>
+                            <div class="mb-3">
+                                <label for="ModalItemNameInput" class="form-label">Item Name</label>
+                                <input type="text" class="form-control" id="ModalItemNameInput" name="ItemName">
+                            </div>
+                            <div class="mb-3">
+                                <label for="ModalRateInput" class="form-label">Rate</label>
+                                <input type="number" class="form-control" id="ModalRateInput" name="Rate">
+                            </div>
+                        </form>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="ModalUpdateButton">Update</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js "
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r "
             crossorigin="anonymous "></script>
@@ -268,8 +254,14 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.22.6/dist/bootstrap-table.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
         <script type="module" src="./Js/subTableInsert/startFunc.js"></script>
+
 </body>
 
 </html>
