--- a/public/V3/Saleswithentry/show.html
+++ b/public/V3/Saleswithentry/show.html
@@ -48,7 +48,7 @@
                     <a href="./show.html"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                         <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                        <span class="fs-4">Vertical</span>
+                        <span class="fs-4">Show</span>
                     </a>
 
                     <!-- Mobile Toggler -->
@@ -71,13 +71,7 @@
                                 <span>Parent</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./vertical.html">
-                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
-                                Vertical
-                            </a>
-                        </li>
-
+                       
 
 
 
